webcompat/static/css/development/components/footer.css
/** @define Footer */

:root {
  --Footer-fontSize: var(--base-fontSize);
  --Footer-backgroundColor: #fff;
  --Footer-border: var(--base-colorDark);
  --Footer-colorHover: var(--base-colorDark);
}

.wc-Footer {
  font-size: var(--Footer-fontSize);
  background-color: var(--Footer-backgroundColor);
  border-top: 5px solid var(--Footer-border);
  padding: 1em 0;
}

@media all and (min-width: 28.12em) {
  .wc-Footer {
    margin-top: 3em;
  }
}

  /* Wrapper */
  .wc-Footer-wrapper {
    display: flex;
    justify-content: space-between;
  }

  /* section */
  .wc-Footer-list {
    padding: .75em 0;
  }

  @media all and (min-width: 37.52em) {
    .wc-Footer-list {
      display: flex;
    }
  }

  /* item */
  @media all and (min-width: 37.52em) {
    .wc-Footer-item + .wc-Footer-item {
      padding-left: .75em;
    }
  }

    /* modifier */
    .wc-Footer-item--follow {
      font-weight: 700;
    }

  /* link */
  .wc-Footer-link {
    display: block;
    color: inherit;
    text-decoration: none;
  }

    /* event */
    .wc-Footer-link:hover .wc-Footer-link-label,
    .wc-Footer-link:focus .wc-Footer-link-label {
      color: var(--Footer-colorHover);
    }

    /* modifier */
    @media all and (min-width: 37.51em) {
      .wc-Footer-link--separator:after {
        content: "//";
        margin-left: 1em;
      }
    }

  .wc-Footer-icon {
    display: block;
    width: 1.5em;
    height: 1.5em;
    overflow: hidden;
    background-repeat: no-repeat;
    color: transparent;
  }

  .wc-Footer-icon--twitter {
    background-image: url("../../../img/twitter.svg");
  }

  .wc-Footer-icon--github {
    background-image: url("../../../img/github-logo.svg");
  }

